--- a/pb/pb.rc
+++ b/pb/pb.rc
@@ -262,7 +262,7 @@ BEGIN
 END
 
 IDD_LOADING DIALOGEX 0, 0, 186, 28
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_DLGFRAME
 CAPTION "Loading..."
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
