--- a/pb/pb.rc
+++ b/pb/pb.rc
@@ -252,13 +252,13 @@ CAPTION "List"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SINGLESEL | LVS_ALIGNLEFT | LVS_OWNERDATA | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,24,358,156
-    DEFPUSHBUTTON   "&Cancel",IDCANCEL,315,185,50,14
+    PUSHBUTTON      "&Cancel",IDCANCEL,315,185,50,14
     PUSHBUTTON      "&Save",IDOK,259,185,50,14
     PUSHBUTTON      "&Add",IDC_ADD,7,185,50,14
     PUSHBUTTON      "&Remove",IDC_REMOVE,63,185,50,14
     EDITTEXT        IDC_SEARCH,37,7,122,14,ES_AUTOHSCROLL
     LTEXT           "Search:",IDC_SEARCHTEXT,7,7,26,14,SS_CENTERIMAGE
-    PUSHBUTTON      "Find &Next",IDC_NEXT,163,7,50,14
+    DEFPUSHBUTTON   "Find &Next",IDC_NEXT,163,7,50,14
 END
 
 IDD_LOADING DIALOGEX 0, 0, 186, 28
