Better error handling of list downloads.  Trap more errors, log more info, change visible status from "Downloading" to "Verifying", make copy of failed-to-load-file lists to .failed.
Merged from 1.1.x branch, r432.

--- a/src/peerblock/pb.rc
+++ b/src/peerblock/pb.rc
@@ -916,6 +916,7 @@ BEGIN
     IDS_STATUS              "Status"
     IDS_DOWNLOADING         "Downloading"
     IDS_NONEAVAILABLE       "None available"
+    IDS_VERIFYING			"Verifying"
     IDS_ABORTED             "Aborted"
     IDS_ERRORCONTACTINGWHY  "Error Contacting URL: %1%"
     IDS_UNEXPCONTACTINGWHY  "Unexpected Response Contacting URL: %1%"
