--- a/src/peerblock/pb.rc
+++ b/src/peerblock/pb.rc
@@ -81,15 +81,6 @@ BEGIN
     PUSHBUTTON      "Block HTTP",IDC_HTTP,277,5,58,14
 END
 
-IDD_SETTINGS DIALOGEX 0, 0, 343, 205
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
-BEGIN
-    PUSHBUTTON      "&Save",IDC_SAVE,5,186,50,14
-    PUSHBUTTON      "&Next ->",IDC_NEXT,288,186,50,14
-    PUSHBUTTON      "<- &Back",IDC_BACK,233,186,50,14,WS_DISABLED
-END
-
 IDD_LISTS DIALOGEX 0, 0, 344, 213
 STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "List Manager"
@@ -352,7 +343,7 @@ BEGIN
 END
 
 IDD_SETTINGS_FIRST DIALOGEX 0, 0, 343, 181
-STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     GROUPBOX        "Log Window",IDC_STATIC,5,5,333,69
@@ -396,6 +387,7 @@ BEGIN
     CONTROL         "Custom1",IDC_HTTPTEXT,"PB_ColorPicker",WS_TABSTOP,263,47,22,8,WS_EX_CLIENTEDGE
     CONTROL         "Custom1",IDC_HTTPBG,"PB_ColorPicker",WS_TABSTOP,263,58,22,8,WS_EX_CLIENTEDGE
     COMBOBOX        IDC_LOGALLOWED,12,89,104,87,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "&Save",IDC_SAVE,5,186,50,14
 END
 
 IDD_SETTINGS_SECOND DIALOGEX 0, 0, 343, 181
@@ -427,6 +419,7 @@ BEGIN
     CONTROL         "Always hide tray icon",IDC_HIDETRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,135,84,10
     CONTROL         "Minimize to tray on close",IDC_HIDEONCLOSE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,135,94,10
     CONTROL         "Keep PeerBlock on top",IDC_ONTOP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,226,135,100,10
+    PUSHBUTTON      "&Save",IDC_SAVE,5,186,50,14
 END
 
 IDD_EDITPORTS DIALOGEX 0, 0, 344, 213
@@ -484,14 +477,6 @@ BEGIN
         RIGHTMARGIN, 335
         TOPMARGIN, 5
         BOTTOMMARGIN, 146
-    END
-
-    IDD_SETTINGS, DIALOG
-    BEGIN
-        LEFTMARGIN, 5
-        RIGHTMARGIN, 338
-        TOPMARGIN, 5
-        BOTTOMMARGIN, 200
     END
 
     IDD_LISTS, DIALOG
@@ -793,7 +778,8 @@ STRINGTABLE
 BEGIN
     IDS_EXCEPTION           "Exception Occured"
     IDS_LOG                 "Protection"
-    IDS_SETTINGS            "Settings"
+    IDS_SETTINGS_FIRST      "Settings 1"
+    IDS_SETTINGS_SECOND     "Settings 2"
     IDS_TIME                "Time"
     IDS_RANGE               "Range"
     IDS_SOURCE              "Source"
