--- a/src/pbfilter/pbfilter.vcproj
+++ b/src/pbfilter/pbfilter.vcproj
@@ -5,7 +5,7 @@
 	Name="pbfilter"
 	ProjectGUID="{141BF107-16D2-4AF8-85F2-FA655A327F35}"
 	RootNamespace="pbfilter"
-	Keyword="ManagedCProj"
+	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
